# Anamnesis

./: .editorconfig  .gitattributes  Anamnesis.slnx  Dockerfile  README.md  default.nix  shell.nix
.github/: dependabot.yml
.github/workflows/: build.yml  lon.yml
src/: Anamnesis.csproj  Anamnesis.http  ModuleVersions.cs  Program.cs  ProviderVersions.cs  package.nix
src/Client/: Anamnesis.Client.csproj  Program.cs  deps.json  package.nix  pyproject.toml
src/Client/GoogleCloud/: GetAccessToken.cs  GoogleCloud.cs  InsertObject.cs
src/Client/Model/: Module.cs  ModuleConfig.cs  Output.cs  Variable.cs
src/Dashboard/: Anamnesis.Dashboard.csproj  Anamnesis.Dashboard.http  Dockerfile  Program.cs  deps.json  package.nix
src/Dashboard/GoogleCloud/: GoogleCloud.cs  ListFolders.cs
src/Dashboard/Model/: Module.cs  Output.cs  Variable.cs
src/GoogleCloud/: GetAccessToken.cs  GetObject.cs  GoogleCloud.cs  ListFolders.cs  ListObjects.cs
src/Module/: ModuleVersions.cs
src/Pages/: Index.cshtml  Index.cshtml.cs  Modules.cshtml  Modules.cshtml.cs
src/Provider/: ProviderPackage.cs  ProviderVersions.cs
src/Repository/: Anamnesis.csproj  Anamnesis.http  Program.cs  package.nix
src/Server/: Anamnesis.Server.csproj  Anamnesis.Server.http  Dockerfile  Program.cs  package.nix
tofu/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars  variables.tf
tofu/module/: artifact_registry.tf  cloud_armor.tf  cloud_run.tf  cloud_storage.tf  dashboard.tf  firestore.tf  iam.tf  load_balancer.tf  main.tf  outputs.tf  repository.tf  variables.tf
(+15 files in other folders)
