[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "anamnesis"
version = "0.0.1"
authors = [
    { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "EUPL-1.2"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/drakon64/Anamnesis"
Issues = "https://github.com/drakon64/Anamnesis/issues"
